@@ -305,6 +305,9 @@ Unreleased changes (1.0-dev)
                   XML and JSON. (kubes)
 
 114. NUTCH-442 - Integrate Solr/Nutch. (dogacan, original version by siren) 
+
+115. NUTCH-652 - AdaptiveFetchSchedule#setFetchSchedule doesn't calculate
+                 fetch interval correctly. (dogacan)
      
 Release 0.9 - 2007-04-02
 
